--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
+name: '戚子越'
+NickName: '七八九'
+webtitle: 'westqzy.github.io'
 bio: 'your awesome bio'
-about: true
+about: false
 aboutyou: 'your introduction'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
