--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'QZY's Journey'
+title: 'QZY の Journey'
 description: 'Document My Growth'
 keywords: 'Aim At Absolute Perfection!'
 url: 'https://abc.github.io' # your host
